translation-tool/inputs/source_meta/objects/HSvc_CaseActivityDeterminant__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HSvc_ConditionName__c</fullName>
        <label>Condition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Activity Determinant</label>
</CustomObject>